# fetch-markdown

./: AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/extract2md/: __init__.py  _fetch.py  _html.py  cli.py  core.py  models.py
src/fetch_markdown/: __init__.py  _fetch.py  _html.py  cli.py  core.py
tests/: test_cli.py  test_core.py  test_fetch_markdown.py  test_html_module.py
